[package]
name = "bd4dj"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
rand = "0.8.5"
serde_json = "1.0.96"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.clap]
version = "4.2.7"
features = ["derive"]
